# dfaas

./: .gitignore  AUTHORS  CITATION.cff  CLAUDE.md  README.md  deploy_dfaas.yaml  dfaasagent.env  dfaasoperator.env  docker-compose.yml  setup-environment.sh  setup_playbook.yaml
01-vbox-nodes/: main.sh
02-vbox-dfaasctrl/: main.sh
03-preseed-nodes/: preseed-01.cfg  preseed-02.cfg  preseed-03.cfg
04-preseed-dfaasctrl/: preseed.cfg  serve.sh
05-bash-nodes/: setup-packages.sh
06-ansible-playbooks/: README.md  hosts.yml  playbook-adjdt.yml  playbook-deploy.yml  (+12 more)
forecaster/: .containerignore  .dockerignore  .gitignore  AGENTS.md  Dockerfile  main.py  manifest.json  pyproject.toml  requirements.txt
forecaster/config/: runtime.json
forecaster/docs/: reload.md  sidecar.md  uv.md
forecaster/model/: config_constants.py  model.py  model_proxy.py  model_store.py  runtime_config.py
forecaster/models/cpu_usage_node/regression/: model.joblib
forecaster/models/power_usage_node/quantile005/: model.joblib
forecaster/models/power_usage_node/quantile095/: model.joblib
forecaster/models/ram_usage_node/quantile095/: model.joblib
forecaster/scalers/scaler_y/: cpu_usage_node.joblib  power_usage_node.joblib  ram_usage_node.joblib
forecaster/scripts/: format.sh  generate_manifest.py  generate_manifest.sh  lint.sh  start.sh  test.sh
forecaster/sidecar/: .containerignore  Dockerfile  README.md  sidecar.sh
forecaster/tests/: conftest.py  test_api.py  test_e2e_container.py  test_e2e_k3s.py  test_model.py  test_model_proxy.py  test_model_store.py  test_runtime_config.py
(+1236 files in other folders)
